Fix sign-in link color in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
 .dark select, .dark option {
   color: #fff;
 }
+.dark .text-du-purple-500 a{
+  color: #6B26FF;
+}
 
 .dark button.bg-du-purple-500 {
   background-color: #9747FF
